--- a/OWINAuthentication/OWINAuthentication.csproj
+++ b/OWINAuthentication/OWINAuthentication.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IdentityProviders\CreateUniqueUser.cs" />
     <Compile Include="IdentityProviders\GoogleAuthentication.cs" />
     <Compile Include="IdentityProviders\FacebookAuthentication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
